fixed the issue of overlapsing bonuses boxes flex-basis was limiting boxes to 200px in absence of a defined height

--- a/app/modules/welcome/scss/_welcome_three.scss
+++ b/app/modules/welcome/scss/_welcome_three.scss
@@ -27,7 +27,7 @@ section#welcome-three{
     ul.bonuses{
       @include display-flex(column, center, center);
       li{
-        @include flex(1, 0, 200px);
+        @include flex(1, 0);
         margin: 0;
         margin-bottom: 0.2rem;
         width: 100%;
